--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,6 @@
     .header__links.menu-open {
         display                                            : flex;
         flex-direction                                     : column;
-        
         position                                           : fixed;
         top                                                : 0;
         right                                              : 0;
@@ -376,7 +375,15 @@
         align-items: center;
         text-align : center;
         padding    : 40px;
-        margin-top : 50px;
+        margin : 80px 0;
     }
-
+.hero__content h1 {
+    margin-bottom : 20px;
+    font-family   : Liberation Serif;
+    font-weight   : 400;
+    font-size     : 48px;
+    line-height   : 96px;
+    letter-spacing: 0%;
+    max-width     : 450px;
+}
 }
