--- a/css/main.css
+++ b/css/main.css
@@ -30,7 +30,7 @@
 /* Header */
 .header {
     position  : fixed;
-    top       : 40px;
+    top       : 30px;
     left      : 0;
     width     : 100%;
     z-index   : 999;
@@ -85,10 +85,6 @@
     width: 100%;
 }
 
-.header__logo img {
-    margin-right: 100px;
-}
-
 .header.scrolled {
     backdrop-filter: blur(8px);
     background     : rgba(0, 0, 0, 0.4);
@@ -108,7 +104,8 @@
 .hero__image {
     flex      : 1;
     background: url("../img/hero.svg") center/cover no-repeat;
-    height    : 100%;
+    height    : 100vh;
+    width: 100vw;
     transition: background-image 1s ease-in-out;
 }
 
@@ -121,6 +118,7 @@
     justify-content: center;
     align-items    : flex-start;
     padding        : 50px;
+
 }
 
 .hero__content h1 {
@@ -180,14 +178,8 @@
 }
 
 .hero__btn:hover {
-    background: #fff;
+    background: #f08e70;
     color     : #000;
-}
-
-
-.hero__logo img {
-    width  : 100%;
-    opacity: 0.85;
 }
 
 /* Bars */
@@ -250,31 +242,41 @@
     line-height   : 32px;
     letter-spacing: 0%;
     text-align    : center;
-    margin-bottom: 15px;
+    margin-bottom : 15px;
 }
+
 .article__title-one {
-    font-size: 35px;
-    text-align    : center;
+    font-size  : 35px;
+    text-align : center;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+
 .article__title-two {
-    font-size: 35px;
-    text-align    : center;
+    font-size  : 35px;
+    text-align : center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
 .article__title-three {
-    font-size: 35px;
-    text-align    : center;
+    font-size  : 35px;
+    text-align : center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-.article h2{
-     position      : relative;
-    transition    : color 0.4s ease;
+
+.article__text-two {
+    max-width: 300px;
 }
-.article h2{
-     position      : relative;
-    transition    : color 0.4s ease;
+
+.article h2 {
+    position  : relative;
+    transition: color 0.4s ease;
 }
+
+.article h2 {
+    position  : relative;
+    transition: color 0.4s ease;
+}
+
 .article h2::after {
     content   : "";
     position  : absolute;
@@ -294,31 +296,182 @@
     width: 100%;
 }
 
-/* Responsive */
-@media (max-width: 768px) {
-.article__list {
-    display        : flex;
-    flex-direction: column;
-    gap: 25px;
-    justify-content: space-between;
-    align-items    : center;
+
+.hr {
+    max-width    : 100%;
+    background   : #000000;
+    margin       : 0 auto;
+    margin-bottom: 50px;
 }
-.article__items p {
-    font-family   : Roboto;
+
+.product {
+    padding: 50px;
+}
+
+.product__container h2 {
+    font-family   : Liberation Serif;
     font-weight   : 400;
-    font-size     : 18px;
-    line-height   : 32px;
+    font-size     : 64px;
+    line-height   : 80px;
     letter-spacing: 0%;
     text-align    : center;
-    margin-bottom: 15px;
-    max-width: 300px;
+    color         : #000000;
+    max-width     : 673px;
+    margin        : 0 auto;
 }
-.article__items{
-    border-top: 1px solid #c9a375;
-    border-left: 2px solid #c9a375;
-    border-right: 2px solid #c9a375;
-    padding: 50px 25px;
+
+.product__text {
+    font-family   : Roboto;
+    font-weight   : 400;
+    font-size     : 12px;
+    line-height   : 18px;
+    letter-spacing: 1px;
+    text-align    : center;
+    text-transform: uppercase;
+    color         : #000000;
+    margin-top    : 20px;
 }
+
+.product__list {
+    display        : flex;
+    justify-content: space-between;
+    align-items    : center;
+    margin-top     : 50px;
+    gap            : 30px;
+}
+
+.product__items h3 {
+    font-family   : Liberation Serif;
+    font-weight   : 400;
+    font-size     : 30px;
+    line-height   : 44px;
+    letter-spacing: 0%;
+    text-align    : center;
+}
+.product__items p{
+    font-family: Roboto;
+font-weight: 400;
+font-size: 16px;
+line-height: 28px;
+letter-spacing: 0%;
+text-align: center;
+max-width: 366px;
+}
+.product__items div{
+    position: relative;
+}
+.product__items h5{
+    position: absolute;
+    top: 30px;
+    right: 0;
+    padding: 30px;
+    background: #000000;
+    color: #fff;
+    border-radius:100%;
+    font-size: larger;
+}
+.product__items h5:hover{
+    background: linear-gradient(50deg, #29ad64, #f7e1cc);
+    transition: 0.7s ease-in;
+}
+.button {
+    display: block;
+    margin: 0 auto;
+    background-color: #000000;
+  padding: 12px 24px;
+  border: 1px solid #4f4f4f;
+  border-radius: 4px;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  font-size: 19px;
+  cursor: pointer;
+  color: #ffffff;
+  z-index: 1;
+}
+
+.button:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #39bd39;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button:hover {
+  color: #000000;
+  border: 1px solid #39bd39;
+}
+
+.button:hover:before {
+  top: -35%;
+  background-color: #39bd39;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button:hover:after {
+  top: -45%;
+  background-color: #39bd4f;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+/* Responsive */
+@media (max-width: 768px) {
+    .product__list {
+    display        : flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items    : center;
+    margin-top     : 50px;
+    gap            : 30px;
+}
+    .article__list {
+        display        : flex;
+        flex-direction : column;
+        gap            : 25px;
+        justify-content: space-between;
+        align-items    : center;
+    }
+
+    .article__items p {
+        font-family   : Roboto;
+        font-weight   : 400;
+        font-size     : 18px;
+        line-height   : 32px;
+        letter-spacing: 0%;
+        text-align    : center;
+        margin-bottom : 15px;
+        max-width     : 300px;
+    }
+
+    .article__items {
+        border-top  : 1px solid #c9a375;
+        border-left : 2px solid #c9a375;
+        border-right: 2px solid #c9a375;
+        padding     : 50px 25px;
+    }
+
     .header__links {
         display: none;
     }
@@ -328,24 +481,25 @@
         z-index: 1000;
     }
 
-  
+
     .header__links.menu-open {
-        display                                            : flex;
-        flex-direction                                     : column;
-        position                                           : fixed;
-        top                                                : 0;
-        right                                              : 0;
-        width                                              : 70%;
-        height                                             : 100vh;
-        background                                         : rgba(0, 0, 0, 0.733);
-        backdrop-filter                                    : blur(5px);
-        padding                                            : 80px 40px 20px;
-        gap                                                : 10px;
-        z-index                                            : 999;
-        transform                                          : translateX(0%);
-        transition                                         : transform 0.3s ease-out;
+        display        : flex;
+        flex-direction : column;
+        position       : fixed;
+        top            : 0;
+        right          : 0;
+        width          : 70%;
+        height         : 100vh;
+        background     : rgba(0, 0, 0, 0.733);
+        backdrop-filter: blur(5px);
+        padding        : 80px 40px 20px;
+        gap            : 10px;
+        z-index        : 999;
+        transform      : translateX(0%);
+        transition     : transform 0.3s ease-out;
 
     }
+
     .header__links:not(.menu-open) {
         transform: translateX(100%);
     }
@@ -365,15 +519,16 @@
         align-items: center;
         text-align : center;
         padding    : 40px;
-        margin : 20px 0;
+        margin     : 20px 0;
     }
-.hero__content h1 {
-    margin-bottom : 20px;
-    font-family   : Liberation Serif;
-    font-weight   : 400;
-    font-size     : 48px;
-    line-height   : 96px;
-    letter-spacing: 0%;
-    max-width     : 450px;
-}
+
+    .hero__content h1 {
+        margin-bottom : 20px;
+        font-family   : Liberation Serif;
+        font-weight   : 400;
+        font-size     : 48px;
+        line-height   : 96px;
+        letter-spacing: 0%;
+        max-width     : 450px;
+    }
 }
