--- a/css/main.css
+++ b/css/main.css
@@ -1438,9 +1438,16 @@ html {
     }
 
     .box.left {
-        width     : 500px;
+        width     : 400px;
         /* указано пользователем */
         height    : 350px;
+        /* указано пользователем */
+        background: #000000;
+    }
+    .box.right{
+        width     : 400px;
+        /* указано пользователем */
+        height    : 250px;
         /* указано пользователем */
         background: #000000;
     }
